fixed height issue on mobile

--- a/style.css
+++ b/style.css
@@ -14,8 +14,17 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 .
 */
 
+html, body, #main-row {
+  height:100%;
+}
+
 
 /* TYPEFACE */
+
+a {
+  cursor: hand;
+}
+
 @media only screen {
   .site-title-font {
     font-size: 1.6rem;
@@ -26,6 +35,10 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
   .site-subtitle-font {
     font-size: 0.6rem;
     letter-spacing: 4px;
+  }
+  
+  #caption_row {
+    height: 120px;
   }
 }
 
@@ -40,18 +53,26 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
     font-size: 0.8rem;  
     letter-spacing: 6.9px;
   }
+  
+  #caption_row {
+    height: 160px;
+  }
 }
 
 @media only screen and (min-width: 64.063em) {
   .site-title-font {
     font-size: 3em;
     letter-spacing: 8px;
-    margin-top: 67px;     
+    margin-top: 67px;
   }
 
   .site-subtitle-font {
     font-size: 1rem;  
     letter-spacing: 8.2px;
+  }
+  
+  #caption_row {
+    height: 200px;
   }
 }
 
@@ -94,11 +115,11 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 }
 
 #placeholder_1 {
-  height: 25vh;
+  height: 25%;
 }
 
 #placeholder_2 {
-  height: 25vh;
+  height: 25%;
 }
 
 #copyright-div {
@@ -115,13 +136,12 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
   -webkit-background-size: cover !important;
   -o-background-size: cover !important; 
   background-size: cover !important; 
-  min-height:100vh !important;
   padding:0 !important;
-  height:100vh !important;
+  height:100%;
 }
 
 #second {
-  height:100vh !important;
+  height:100%;
 }
 
 @media only screen and (min-width: 40.063em) {
@@ -134,7 +154,7 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 /* MENU */
 
 #large-menu {
-  margin-top: 9vh;
+  margin-top: 9%;
 }
 
 .dropdown {
@@ -143,8 +163,8 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 
 #menu-row {
   background-color:#F2F2F2;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
+  margin-top: 5%;
+  margin-bottom: 5%;
   text-align:center;  
 }
 
@@ -188,7 +208,7 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 #menu-menu-1 a {  
   color: inherit;
   text-decoration: inherit;
-  cursor: inherit;
+  cursor: hand;
 } 
 
 #menu-menu-1 .current-menu-item a {
@@ -215,9 +235,8 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 #caption {
   background-color: white;
   text-align: center;
-  text-transform: uppercase; 
-  height:200px;
-  width:;
+  text-transform: uppercase;
+  height:100%;
 }
 
 /* FORM */
